--- a/gitops/env/stage1/argocd-secrets.yaml
+++ b/gitops/env/stage1/argocd-secrets.yaml
@@ -81,4 +81,4 @@ spec:
   data:
     - secretKey: admin.password
       remoteRef:
-        key: argocdInitialPassword
+        key: argocdInitialPasswordBcrypt
