--- a/.github/workflows/terraform_workflow.yaml
+++ b/.github/workflows/terraform_workflow.yaml
@@ -21,7 +21,7 @@ jobs:
       gcp-sa: "${{ secrets.GCP_SA }}"
       wif-provider: "${{ secrets.WIF_PROVIDER }}"
       gh-app-id: ${{ secrets.GH_APP_ID }}
-      gh-argocd-initial-password: ${{ secrets.ARGOCD_INITIAL_PASSWORD }}
+      gh-argocd-initial-password-bcrypt: ${{ secrets.ARGOCD_INITIAL_PASSWORD_BCRYPT }}
       gh-jenkins-initial-password: ${{ secrets.JENKINS_INITIAL_PASSWORD }}
       gh-keycloak-initial-password: ${{ secrets.KEYCLOAK_INITIAL_PASSWORD }}
       gh-gerrit-admin-initial-password: ${{ secrets.GERRIT_ADMIN_INITIAL_PASSWORD }}
