--- a/gitops/env/stage1/argocd-secrets.yaml
+++ b/gitops/env/stage1/argocd-secrets.yaml
@@ -19,7 +19,7 @@ metadata:
   labels:
     argocd.argoproj.io/secret-type: repository
 stringData:
-  url: https://github.com/AGBG-ASG/acn-horizon-sdv
+  url: https://github.com/Horizon-test-org/horizon-sdv-tst
   type: git
 ---
 apiVersion: v1
@@ -36,7 +36,7 @@ metadata:
 spec:
   provider:
     gcpsm:
-      projectID: "sdvc-2108202401"
+      projectID: "sdvd-0502202501"
       auth:
         workloadIdentity:
           clusterLocation: europe-west1
