--- a/gitops/env/stage1/argocd-config.yaml
+++ b/gitops/env/stage1/argocd-config.yaml
@@ -27,8 +27,8 @@ metadata:
 spec:
   project: horizon-sdv
   source:
-    repoURL: https://github.com/AGBG-ASG/acn-horizon-sdv
-    targetRevision: env/sbx
+    repoURL: https://github.com/Horizon-test-org/horizon-sdv-tst
+    targetRevision: env/tst
     path: gitops/env/stage2
   destination:
     server: https://kubernetes.default.svc
