Update missed details

--- a/gitops/env/stage1/argocd-secrets.yaml
+++ b/gitops/env/stage1/argocd-secrets.yaml
@@ -9,7 +9,7 @@ metadata:
   name: argocd-sa
   namespace: argocd
   annotations:
-    iam.gke.io/gcp-service-account: gke-argocd-sa@sdvc-2108202401.iam.gserviceaccount.com
+    iam.gke.io/gcp-service-account: gke-argocd-sa@sdvd-0502202501.iam.gserviceaccount.com
 ---
 apiVersion: v1
 kind: Secret
