update workflow triggers

--- a/.github/workflows/terraform_workflow.yaml
+++ b/.github/workflows/terraform_workflow.yaml
@@ -3,7 +3,7 @@ name: Terraform
 on:
   push:
     paths:
-      - "terraform/*"
+      - "terraform/**"
     branches: ["env/tst"]
   workflow_dispatch:
 
