--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -125,8 +125,10 @@ jobs:
         run: |
           echo "$GH_APP_KEY" | openssl pkcs8 -topk8 -nocrypt -outform PEM > key.pem
           PKCS8_KEY=$(<key.pem)
+          while IFS= read -r line; do
+            echo "::add-mask::$line"
+          done <<< "$PKCS8_KEY"
           echo "TF_VAR_sdv_gh_app_key_pkcs8<<EOF" >> $GITHUB_ENV
-          echo "$PKCS8_KEY"
           echo "$PKCS8_KEY" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
 
