--- a/gitops/env/stage2/values.yaml
+++ b/gitops/env/stage2/values.yaml
@@ -8,7 +8,7 @@ config:
     keycloak: europe-west1-docker.pkg.dev/sdvd-0502202501/horizon-sdv/keycloak-post:1.0.0
     keycloakmtkconnect: europe-west1-docker.pkg.dev/sdvd-0502202501/horizon-sdv/keycloak-post-mtk-connect:1.0.0
     keycloakjenkins: europe-west1-docker.pkg.dev/sdvd-0502202501/horizon-sdv/keycloak-post-jenkins:1.0.0
-    keycloakgerrit: europe-west1-docker.pkg.dev/sdvd-0502202501/horizon-sdv/keycloak-post-gerrit:latest
+    keycloakgerrit: europe-west1-docker.pkg.dev/sdvd-0502202501/horizon-sdv/keycloak-post-gerrit:1.0.0
     mtkconnect: europe-west1-docker.pkg.dev/sdvd-0502202501/horizon-sdv/mtk-connect-post:1.0.0
     gerrit: europe-west1-docker.pkg.dev/sdvd-0502202501/horizon-sdv/gerrit-post:1.0.0
   workloads:
