--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -106,9 +106,9 @@ jobs:
             env_only=${temp%-plan*}
             env_only=${env_only%-apply*}
             echo "env_only=$env_only" >> $GITHUB_OUTPUT;
-          elif [[ "${{ github.ref }}" == 'refs/heads/env/tst' ]]; then
-            echo "environment=tst" >> $GITHUB_OUTPUT;
-            echo "env_only=tst" >> $GITHUB_OUTPUT;
+          elif [[ "${{ github.ref }}" == 'refs/heads/env/sbx' ]]; then
+            echo "environment=sbx" >> $GITHUB_OUTPUT;
+            echo "env_only=sbx" >> $GITHUB_OUTPUT;
           fi
 
   terraform:
@@ -276,7 +276,7 @@ jobs:
         continue-on-error: true
 
       - name: Reformat Plan
-        if: github.ref != 'refs/heads/env/tst'
+        if: github.ref != 'refs/heads/env/sbx'
         env:
           TFPLAN_STDOUT: ${{ steps.tfplan.outputs.stdout }}
           TFPLAN_STDERR: ${{ steps.tfplan.outputs.stderr }}
@@ -290,7 +290,7 @@ jobs:
           fi
 
       - name: Put Plan in Env Var
-        if: github.ref != 'refs/heads/env/tst'
+        if: github.ref != 'refs/heads/env/sbx'
         run: |
           PLAN=$(cat plan.txt)
           echo "PLAN<<EOF" >> $GITHUB_ENV
@@ -299,7 +299,7 @@ jobs:
 
       - name: Post Plan to GitHub PR
         uses: mshick/add-pr-comment@v2
-        if: github.ref != 'refs/heads/env/tst'
+        if: github.ref != 'refs/heads/env/sbx'
         with:
           allow-repeats: false
           repo-token: ${{steps.get_github_app_token.outputs.token}}
@@ -321,7 +321,7 @@ jobs:
       - name: terraform apply
         working-directory: ${{ inputs.directory }}/
         id: tfapply
-        if: github.ref == 'refs/heads/env/tst'
+        if: github.ref == 'refs/heads/env/sbx'
         env:
           TF_VAR_sdv_gh_access_token: ${{ steps.get_github_app_token.outputs.token }}
         run: |
@@ -330,7 +330,7 @@ jobs:
         continue-on-error: true
 
       - name: Post Apply Success
-        if: github.ref == 'refs/heads/env/tst' && steps.tfapply.outcome == 'success'
+        if: github.ref == 'refs/heads/env/sbx' && steps.tfapply.outcome == 'success'
         uses: mshick/add-pr-comment@v2
         with:
           allow-repeats: false
@@ -344,7 +344,7 @@ jobs:
         continue-on-error: true
 
       - name: Post Apply Failure
-        if: github.ref == 'refs/heads/env/tst' && steps.tfapply.outcome == 'failure'
+        if: github.ref == 'refs/heads/env/sbx' && steps.tfapply.outcome == 'failure'
         uses: mshick/add-pr-comment@v2
         with:
           allow-repeats: false
@@ -358,7 +358,7 @@ jobs:
         continue-on-error: true
 
       - name: Fail if apply failed
-        if: github.ref == 'refs/heads/env/tst' && steps.tfapply.outcome == 'failure'
+        if: github.ref == 'refs/heads/env/sbx' && steps.tfapply.outcome == 'failure'
         uses: actions/github-script@v6
         with:
           script: |
