--- a/gitops/env/stage2/apps/gerrit/values.yaml
+++ b/gitops/env/stage2/apps/gerrit/values.yaml
@@ -1,8 +1,8 @@
 config:
-  domain: tst.horizon-sdv.com
+  domain: sbx.horizon-sdv.com
 spec:
   destination:
     server: https://kubernetes.default.svc
   source:
     repoURL: https://github.com/Horizon-test-org/horizon-sdv-tst
-    targetRevision: env/tst
+    targetRevision: env/sbx
