--- a/gitops/env/stage2/values.yaml
+++ b/gitops/env/stage2/values.yaml
@@ -1,23 +1,23 @@
 config:
   name: Horizon SDV
-  domain: tst.horizon-sdv.com
-  projectID: sdvd-0502202501
+  domain: sbx.horizon-sdv.com
+  projectID: sdvc-2108202401
   region: europe-west1
   zone: europe-west1-d
   postjobs:
-    keycloak: europe-west1-docker.pkg.dev/sdvd-0502202501/horizon-sdv/keycloak-post:1.0.0
-    keycloakmtkconnect: europe-west1-docker.pkg.dev/sdvd-0502202501/horizon-sdv/keycloak-post-mtk-connect:1.0.0
-    keycloakjenkins: europe-west1-docker.pkg.dev/sdvd-0502202501/horizon-sdv/keycloak-post-jenkins:1.0.0
-    keycloakgerrit: europe-west1-docker.pkg.dev/sdvd-0502202501/horizon-sdv/keycloak-post-gerrit:1.0.0
-    mtkconnect: europe-west1-docker.pkg.dev/sdvd-0502202501/horizon-sdv/mtk-connect-post:1.0.0
-    gerrit: europe-west1-docker.pkg.dev/sdvd-0502202501/horizon-sdv/gerrit-post:1.0.0
+    keycloak: europe-west1-docker.pkg.dev/sdvc-2108202401/horizon-sdv/keycloak-post:1.0.0
+    keycloakmtkconnect: europe-west1-docker.pkg.dev/sdvc-2108202401/horizon-sdv/keycloak-post-mtk-connect:1.0.0
+    keycloakjenkins: europe-west1-docker.pkg.dev/sdvc-2108202401/horizon-sdv/keycloak-post-jenkins:1.0.0
+    keycloakgerrit: europe-west1-docker.pkg.dev/sdvc-2108202401/horizon-sdv/keycloak-post-gerrit:1.0.0
+    mtkconnect: europe-west1-docker.pkg.dev/sdvc-2108202401/horizon-sdv/mtk-connect-post:1.0.0
+    gerrit: europe-west1-docker.pkg.dev/sdvc-2108202401/horizon-sdv/gerrit-post:1.0.0
   workloads:
     android:
       url: https://github.com/Horizon-test-org/horizon-sdv-tst
-      branch: env/tst
+      branch: env/sbx
 spec:
   destination:
     server: https://kubernetes.default.svc
   source:
     repoURL: https://github.com/Horizon-test-org/horizon-sdv-tst
-    targetRevision: env/tst
+    targetRevision: env/sbx
