--- a/gitops/env/stage2/templates/gerrit-post.yaml
+++ b/gitops/env/stage2/templates/gerrit-post.yaml
@@ -76,6 +76,7 @@ spec:
       containers:
         - name: gerrit-post-container
           image: {{ .Values.config.postjobs.gerrit }}
+          imagePullPolicy: Always
           volumeMounts:
             - mountPath: /mnt/git
               name: shared
