--- a/gitops/env/stage2/templates/mtk-connect-post.yaml
+++ b/gitops/env/stage2/templates/mtk-connect-post.yaml
@@ -75,4 +75,5 @@ spec:
               value: "harbor.scpmtk.com/mtk-connect"
 
           image: {{ .Values.config.postjobs.mtkconnect }}
+          imagePullPolicy: Always
       restartPolicy: Never
